--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,7 @@
-pydantic-settings==2.7.1
-python-dotenv==1.0.1
 fastapi==0.111.0
 uvicorn==0.29.0
+python-dotenv==1.0.1
+pydantic==2.7.1
+pydantic-settings==2.2.1
+spotipy==2.23.0
+websockets==12.0
