--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview --port 8080"
+    "preview": "vite preview"
   }
 }
