--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.111.0
-uvicorn==0.29.0
-python-dotenv==1.0.1
-pydantic==2.7.1
-pydantic-settings==2.2.1
+fastapi==0.109.2
+uvicorn==0.27.0
+python-dotenv==1.0.0
+pydantic==2.6.0
+pydantic-settings==2.1.0
 spotipy==2.23.0
 websockets==12.0
+python-multipart==0.0.6
